tests/ui/suggestions/many-type-ascription.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `:`
  --> $DIR/many-type-ascription.rs:2:14
   |
LL |     let _ = 0: i32;
   |              ^ expected one of `.`, `;`, `?`, `else`, or an operator

error: aborting due to 1 previous error

